--- a/wp-content/themes/wetheme/style.css
+++ b/wp-content/themes/wetheme/style.css
@@ -1,11 +1,8 @@
-/*
-Theme Name: WE Theme
-Author: TAnita
-Author URI: http://tanita.webege.com
-Description: WordPress starter bootstrap dev theme
-Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: responsive, flat, bootstrap, simple, mobile-ready,black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
-Text Domain: wetheme
-*/
+/**
+ * wetheme - Theme for developing Wordpress Projects
+ * @version v1.0.0
+ * @license ISC
+ * @copyright 2019 wall-E
+ * @link https://wall-E.rs
+ */
+body{color:red}
