Enqueue wetheme style; Fix scss variables; Add mixins

--- a/wp-content/themes/wetheme/src/sass/_base/_print.scss
+++ b/wp-content/themes/wetheme/src/sass/_base/_print.scss
@@ -75,7 +75,7 @@
             min-width: $print-body-min-width !important;
         }
 
-        .wrapper {
+        .g-container {
             min-width: $print-body-min-width !important;
         }
     }
