--- a/wp-content/themes/wetheme/src/sass/_base/_fonts.scss
+++ b/wp-content/themes/wetheme/src/sass/_base/_fonts.scss
@@ -223,3 +223,77 @@ $font-path: './src/fonts' !default;
     font-weight: 100;
     font-style: italic;
 }
+
+//Playfair Display
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Bold.svg#PlayfairDisplay-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BlackItalic.svg#PlayfairDisplay-BlackItalic') format('svg');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Italic.svg#PlayfairDisplay-Italic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Regular.svg#PlayfairDisplay-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-BoldItalic.svg#PlayfairDisplay-BoldItalic') format('svg');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.eot');
+    src: url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.eot?#iefix') format('embedded-opentype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.woff2') format('woff2'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.woff') format('woff'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.ttf') format('truetype'),
+        url('#{$font-path}/PlayfairDisplay/PlayfairDisplay-Black.svg#PlayfairDisplay-Black') format('svg');
+    font-weight: 900;
+    font-style: normal;
+}
+
