--- a/wp-content/themes/wetheme/style.css
+++ b/wp-content/themes/wetheme/style.css
@@ -297,6 +297,48 @@ progress {
   font-weight: 100;
   font-style: italic; }
 
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Bold.svg#PlayfairDisplay-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BlackItalic.svg#PlayfairDisplay-BlackItalic") format("svg");
+  font-weight: 900;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Italic.svg#PlayfairDisplay-Italic") format("svg");
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Regular.svg#PlayfairDisplay-Regular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-BoldItalic.svg#PlayfairDisplay-BoldItalic") format("svg");
+  font-weight: bold;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.eot");
+  src: url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.eot?#iefix") format("embedded-opentype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.woff2") format("woff2"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.woff") format("woff"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.ttf") format("truetype"), url("./src/fonts/PlayfairDisplay/PlayfairDisplay-Black.svg#PlayfairDisplay-Black") format("svg");
+  font-weight: 900;
+  font-style: normal; }
+
 body.fancybox-active {
   overflow: hidden; }
 
@@ -1055,5 +1097,118 @@ li.fancybox-thumbs-loading {
     right: 110px; }
   .fancybox-thumbs > ul > li {
     max-width: calc(100% - 10px); } }
+
+/* stylelint-disable selector-list-comma-newline-after */
+.blog-header {
+  line-height: 1;
+  border-bottom: 1px solid #e5e5e5; }
+
+.blog-header-logo {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-size: 2.25rem; }
+
+.blog-header-logo:hover {
+  text-decoration: none; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif; }
+
+.display-4 {
+  font-size: 2.5rem; }
+
+@media (min-width: 768px) {
+  .display-4 {
+    font-size: 3rem; } }
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden; }
+
+.nav-scroller .nav {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+  -webkit-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch; }
+
+.nav-scroller .nav-link {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  font-size: .875rem; }
+
+.card-img-right {
+  height: 100%;
+  border-radius: 0 3px 3px 0; }
+
+.flex-auto {
+  -ms-flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+          flex: 0 0 auto; }
+
+.h-250 {
+  height: 250px; }
+
+@media (min-width: 768px) {
+  .h-md-250 {
+    height: 250px; } }
+
+/*
+   * Blog name and description
+   */
+.blog-title {
+  margin-bottom: 0;
+  font-size: 2rem;
+  font-weight: 400; }
+
+.blog-description {
+  font-size: 1.1rem;
+  color: #999; }
+
+@media (min-width: 40em) {
+  .blog-title {
+    font-size: 3.5rem; } }
+
+/* Pagination */
+.blog-pagination {
+  margin-bottom: 4rem; }
+
+.blog-pagination > .btn {
+  border-radius: 2rem; }
+
+/*
+   * Blog posts
+   */
+.blog-post {
+  margin-bottom: 4rem; }
+
+.blog-post-title {
+  margin-bottom: .25rem;
+  font-size: 2.5rem; }
+
+.blog-post-meta {
+  margin-bottom: 1.25rem;
+  color: #999; }
+
+/*
+   * Footer
+   */
+.blog-footer {
+  padding: 2.5rem 0;
+  color: #999;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5; }
+
+.blog-footer p:last-child {
+  margin-bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
