Enqueue bootstrap social style for buttons and create shortcode for fb button

--- a/wp-content/themes/wetheme/src/sass/_vendor.scss
+++ b/wp-content/themes/wetheme/src/sass/_vendor.scss
@@ -1,2 +1,3 @@
+@import '_vendor/_bootstrap/bootstrap-social.scss';
 @import '_vendor/_fancybox/fancybox';
 @import '_vendor/_fontawesome/fontawesome';
