--- a/wp-content/themes/wetheme/src/sass/style.scss
+++ b/wp-content/themes/wetheme/src/sass/style.scss
@@ -2,7 +2,7 @@
  * wetheme - Theme for developing Wordpress Projects
  * @version v1.0.0
  * @license ISC
- * @copyright 2019 wall-E
+ * @copyright 2019 wall-E@New
  * @link https://wall-E.rs
  */
 
