Create folder structure for scss files

--- a/wp-content/themes/wetheme/src/sass/_site.scss
+++ b/wp-content/themes/wetheme/src/sass/_site.scss
@@ -1,1 +1,7 @@
-@import '_site/_layouts/_l-page-blog'
+@import 'site-global';
+@import 'site-helpers';
+@import 'site-templates';
+@import 'site-layouts';
+@import 'site-modules';
+@import 'site-components';
+@import 'site-elements'
